deploy/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: credit-scoring-fe
  labels:
    app.kubernetes.io/name: credit-scoring-fe
spec:
  selector:
    app.kubernetes.io/name: credit-scoring-fe
  ports:
    - name: http
      port: 80
      targetPort: http
  type: ClusterIP
